prevent chat frame scroll from scrolling chat selector on mobiles

--- a/src/ui/screens/ChatScreen/ChatFrame/style.css
+++ b/src/ui/screens/ChatScreen/ChatFrame/style.css
@@ -187,6 +187,10 @@
 
 @media only screen and (max-width: 800px) {
 
+  .chat-frame {
+    overflow-y: scroll;
+  }
+  
   .chat-frame .chat-messages {
     padding: 0 8px;
     overflow-y: initial;
