--- a/src/ui/screens/ChatScreen/style.css
+++ b/src/ui/screens/ChatScreen/style.css
@@ -3,6 +3,7 @@
   align-self: stretch;
   display: flex;
   flex: 1;
+  height: 100%;
 }
 
 .flip-horizontal {
